# gazebo-fmi

./: .travis.yml  CMakeLists.txt  Contributing.md  README.md
.ci/: install_debian_and_script.sh
cmake/: FMIUtils.cmake  FetchFMILibrary.cmake  FindFMILibrary.cmake  FindMATIO.cmake  setup-examples.sh.in
libraries/: CMakeLists.txt
libraries/private-utils/: CMakeLists.txt  FMUCoSimulation.cc  SDFConfigurationParsing.cc
libraries/private-utils/include/gazebo_fmi/: FMUCoSimulation.hh  GazeboFMIUtils.hh  SDFConfigurationParsing.hh
libraries/private-utils/test/: CMakeLists.txt  GazeboFMIUtilsComputeJointAccelerationTest.cc  test_ComputeJointAcceleration_WorldAsChild.world  test_ComputeJointAcceleration_WorldAsParent.world
plugins/: CMakeLists.txt
plugins/actuator/: CMakeLists.txt  FMIActuatorPlugin.cc  FMIActuatorPlugin.hh  FMUCoSimulation.cc  GazeboFMIUtils.hh  README.md
plugins/actuator/doc/: modelica-actuator.md
plugins/actuator/examples/: CMakeLists.txt
plugins/actuator/examples/damped_pendulum/: CMakeLists.txt  Damper.mo  README.md  damped_pendulum.world  setup-build.sh.in
plugins/actuator/examples/simple_electrical_actuator/: CMakeLists.txt  README.md  SimpleElectricalActuator.mo  simple_electrical_actuator.world
plugins/actuator/test/: CMakeLists.txt  CompliantTransmission.mo  CompliantTrasmission.mo  DelayTransmission.mo  FMIActuatorPluginKnownInputTest.cc  FMIActuatorPluginPositionRegulationTest.cc  FMIActuatorPluginTest.cc  IdentityTransmission.mo  IdentityTrasmission.mo  NullTransmission.mo  NullTrasmission.mo  SoftTransmission.mo  StiffTransmission.mo  plotKnownInputData.m  test_CompliantTransmission.world  test_DelayTransmission.world  test_IdentityTransmission.world  test_IdentityTrasmission.world  test_NoTransmission.world  test_NullTransmission.world  test_NullTrasmission.world  test_SoftTransmission.world  test_StiffTransmission.world
plugins/single-body-fluid-dynamics/: CMakeLists.txt  FMISingleBodyFluidDynamicsPlugin.cc  FMISingleBodyFluidDynamicsPlugin.hh  README.md
plugins/single-body-fluid-dynamics/doc/: modelica-single-body-fluid-dynamics.md
plugins/single-body-fluid-dynamics/test/: CMakeLists.txt  FMISingleBodyFluidDynamicsPluginTest.cc  LinearFriction.mo  NullFriction.mo  test_LinearFriction.world  test_NullFriction.world
plugins/statelogger/: CMakeLists.txt  StateLoggerDepot.h  stateLoggerInfo.h
